--- a/microservice-gate-ratelimit/pom.xml
+++ b/microservice-gate-ratelimit/pom.xml
@@ -19,11 +19,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-hystrix</artifactId>
         </dependency>
-			<dependency>
+ 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-netflix-core</artifactId>
 				<version>1.3.1.RELEASE</version>
-			</dependency>
+			</dependency><!-- -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
