名字变更后的bug

--- a/microservice-auth-client/pom.xml
+++ b/microservice-auth-client/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>com.yonyou.cloud</groupId>
-            <artifactId>microservice-gate-common</artifactId>
+            <artifactId>ops-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
