--- a/microservice-auth-client/pom.xml
+++ b/microservice-auth-client/pom.xml
@@ -42,5 +42,11 @@
             <version>1.16.14</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.yonyou.cloud</groupId>
+	        <artifactId>common-elegance</artifactId>
+	        <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
