--- a/microservice-filter/pom.xml
+++ b/microservice-filter/pom.xml
@@ -1,16 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.yonyou.cloud</groupId>
-  <artifactId>microservice-zuul-db-starter</artifactId>
-  <version>0.0.1</version>
-  <packaging>jar</packaging>
-  <!-- 
-  	<parent>
-		<groupId>org.springframework.cloud</groupId>
-		<artifactId>spring-cloud-starter-parent</artifactId>
-		<version>Camden.SR5</version>
-	</parent> -->
-	
+  <artifactId>microservice-filter-starter</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -39,39 +33,43 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
+  
+    <properties>
+        <!-- 依赖版本 -->
         <mapper.version>3.4.0</mapper.version>
         <mybatis.version>3.3.1</mybatis.version>
         <mybatis.spring.version>1.2.4</mybatis.spring.version>
         <pagehelper.version>4.1.1</pagehelper.version>
-	</properties>
-
-	<dependencies>
-        <!--使用hystrix-->
-         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-hystrix</artifactId>
-        </dependency> 
-<!--  		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-			
-				<version>1.4.7.RELEASE</version>
-		</dependency>  -->
-		
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-<!-- 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
-		</dependency> -->
+    </properties>
+      <dependencies>
+          <!-- 这是一个web项目-->
+           <dependency>
+              <groupId>org.springframework.boot</groupId>
+              <artifactId>spring-boot-starter-web</artifactId>
+          </dependency><!-- -->
+  
+          <dependency>
+              <groupId>org.springframework.boot</groupId>
+              <artifactId>spring-boot-starter</artifactId>
+          </dependency>
+  
+          <dependency>
+              <groupId>com.jayway.jsonpath</groupId>
+             <artifactId>json-path</artifactId>
+              <scope>test</scope>
+          </dependency>
+          <!-- groovy支持-->
+          <dependency>
+              <groupId>org.codehaus.groovy</groupId>
+              <artifactId>groovy-all</artifactId>
+              <version>2.4.7</version>
+          </dependency>
+           
+ 		<dependency>  
+  		  <groupId>org.springframework.cloud</groupId>
+  		  <artifactId>spring-cloud-starter-zuul</artifactId>
+  		  <version>1.2.5.RELEASE</version>
+		</dependency> 
 
         <!-- druid -->
         <dependency>
@@ -125,27 +123,17 @@
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
         
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
         </dependency>
-	</dependencies>
-
-<!-- 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-		<defaultGoal>compile</defaultGoal>
-	</build> -->
-	
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.33</version>
+        </dependency>
+      </dependencies>
+  
 </project>
