--- a/microservice-zuul-db/pom.xml
+++ b/microservice-zuul-db/pom.xml
@@ -137,6 +137,23 @@
 			<version>3.4</version>
 		</dependency>
 	</dependencies>
+	
+	
+	
+	<distributionManagement>
+		<repository>
+			<id>nexus-releases</id>
+			<name>Releases name</name>
+			<url>http://210.13.111.26:10160/nexus/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>nexus-snapshots</id>
+			<name>snapshots name</name>
+			<url>http://210.13.111.26:10160/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
+	
+	
 
 	<!-- <build> <plugins> <plugin> <groupId>org.springframework.boot</groupId> 
 		<artifactId>spring-boot-maven-plugin</artifactId> </plugin> </plugins> <defaultGoal>compile</defaultGoal> 
