--- a/microservice-filter/pom.xml
+++ b/microservice-filter/pom.xml
@@ -62,11 +62,11 @@
 			<version>1.2.5.RELEASE</version>
 		</dependency>
 
-		<!-- druid -->
+		<!--通过starter简化配置 -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
-			<artifactId>druid</artifactId>
-			<version>1.0.11</version>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>1.1.4</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
