--- a/microservice-zuul-db/pom.xml
+++ b/microservice-zuul-db/pom.xml
@@ -29,11 +29,18 @@
 				<artifactId>fastjson</artifactId>
 				<version>1.2.33</version>
 			</dependency>
-			<dependency>
+<!-- 			<dependency>
 				<groupId>com.alibaba</groupId>
 				<artifactId>druid</artifactId>
 				<version>1.0.11</version>
-			</dependency>
+			</dependency> -->
+			
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>1.1.4</version>
+		</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<properties>
@@ -74,10 +81,16 @@
 			<scope>runtime</scope> </dependency> -->
 
 		<!-- druid -->
-		<dependency>
+<!-- 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
 			<version>1.0.11</version>
+		</dependency> -->
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>1.1.4</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
